@@ -177,6 +177,22 @@ name|core
 operator|.
 name|report
 operator|.
+name|ArtifactDownloadReport
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|report
+operator|.
 name|DownloadReport
 import|;
 end_import
@@ -473,8 +489,47 @@ name|DownloadOptions
 name|options
 parameter_list|)
 block|{
+name|DownloadReport
+name|dr
+init|=
+operator|new
+name|DownloadReport
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|artifacts
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|dr
+operator|.
+name|addArtifactReport
+argument_list|(
+operator|new
+name|ArtifactDownloadReport
+argument_list|(
+name|artifacts
+index|[
+name|i
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 return|return
-literal|null
+name|dr
 return|;
 block|}
 specifier|public
